--- a/src/pages/PetOwners/Home/HeroSection/HeroSection.css
+++ b/src/pages/PetOwners/Home/HeroSection/HeroSection.css
@@ -1,29 +1,4 @@
-/* .hero-section{
-    position: relative;
-    z-index: -1;
-}
-.hero-section::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 90vh;
-    background-image: url('https://www.dutch.com/cdn/shop/files/yellow_lab_puppy.png?v=1709840845&width=1944');
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: -2;
-}
-.hero-section::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 90vh;
-    background: rgba(0, 0, 0, 0.562);
-    z-index: -1;
-} */
+/* 
 .hero-section {
     position: relative;
     width: 100%;
@@ -52,5 +27,5 @@
 }
 
 h2 span.text-secondary {
-    color: #0FCFCF; /* Example secondary color */
-}
+    color: #0FCFCF;
+} */
