added modal for booking confirmation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,16 @@ html {
     border-radius: 100px;
     font-weight: bold;
 }
+
+/* Hide scrollbar for a specific element */
+.hide-scrollbar {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    
+    /* For Webkit-based browsers (Chrome, Safari, Edge) */
+    overflow-y: scroll; /* Ensure the element is scrollable */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Edge */
+}
