structured the hero section and a simple feature section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,11 @@ html {
     font-weight: bold;
 }
 
+.app-container {
+    padding-right: 80px;
+    padding-left: 80px;
+}
+
 /* Hide scrollbar for a specific element */
 .hide-scrollbar {
     scrollbar-width: none; /* Firefox */
