Modified dashboard page design a bit

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@ html {
 :root {
     --primary-color: #672e5b;
     --primary-color-hover: #58294E;
-    --secondary-color: #ffb330;
+    --secondary-color: #5252ff;
 }
 
 
