--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,8 @@ html {
 :root {
     --primary-color: #672e5b;
     --primary-color-hover: #58294E;
-    --secondary-color: #5252ff;
+    --secondary-color: #3B82F6;
+    --secondary-color: #2b74e9;
 }
 
 
